fix: dark mode hover response

--- a/style.css
+++ b/style.css
@@ -33,10 +33,10 @@
 :root[data-theme="dark"] {
   --bg: #000000;
   --surface: #0A0A0A;
-  --surface2: #171717;
+  --surface2: #9d9d9d;
   --border: #262626;
   --border2: #404040;
-  --text: #FAFAFA;
+  --text: #111827;
   --text2: #D4D4D8;
   --text3: #A1A1AA;
   --accent: #FFFFFF;
